<resources>
    <string name="app_name">NMedia</string>
    <string name="mainText">NMedia!</string>
    <string name="author" translatable="false">Нетология. Университет интернет-профессий будущего</string>
    <string name="published" translatable="false">21 мая в 18:36</string>
    <string name="content" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с
        интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению.
        Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов.
        Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше,
        целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку
        перемен → http://netolo.gy/fyb</string>
    <string name="likes_count" translatable="false">1000</string>
    <string name="repost_count" translatable="false">5</string>
    <string name="viewing_count" translatable="false">5</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="description_post_save">Save</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_shares">Shares</string>
    <string name="description_post_menu">Menu</string>
    <string name="description_post_viewing">Viewing</string>
    <string name="error_empty_content">Error empty content</string>
    <string name="chooser_share_post">Share post</string>
    <string name="post_text">Post text</string>
    <string name="videoImg">Video</string>
    <string name="network_error">Network_error</string>
    <string name="no_posts">No_posts</string>
    <string name="retry">Retry</string>
    <string name="failed_refresh_news" translatable="false">Filed to refresh news feed</string>
    <string name="google_play_unavailable" translatable="false">Google Api Unavailable</string>

</resources>